HW16/E-6.0.103-Chop_v1/wdir_msg/compile.err

Chop.java:13: error: incompatible types: possible lossy conversion from int to short
            n = n >> 1;
                  ^
1 error


